Add Karuna Aid section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ layout: default
     <div class="tab">
       <button class="tablinks active" onclick="changeTab(event, 'studycenter')">Karuna Kendra Study Center</button>
       <button class="tablinks" onclick="changeTab(event, 'espresso')">Stronger Than Espresso</button>
-      <button class="tablinks" onclick="changeTab(event, 'covid')">Covid 2020</button>
+      <button class="tablinks" onclick="changeTab(event, 'covid')">Karuna Covid Releif 2020</button>
+      <button class="tablinks" onclick="changeTab(event, 'karuna-aid')">Karuna Aid</button>
     </div>
 
     <!-- Tab content -->
@@ -43,14 +44,31 @@ layout: default
         <p>Stronger Than Espresso is a venture of Karuna Welfare Society for the betterment of women suffering from domestic violence and abuse. Our counselors cover each area every week on daily basis and counsel women on their issues. Hygiene is distributed bi- monthly and its use and benefits are inculcated as well.</p>
       </div>
     </div>
-
     <div id="covid" class="tabcontent">
-      <h4>Covid Releif 2020:</h4>
+      <h4>Karuna Covid Releif 2020:</h4>
       <div class="multicolumn">
-        <p>At the start of this year with the Covid-19 pandemic hitting the entire world, those living under the poverty line were hit even harder. Loss of jobs led to lack of food, and they were unable to have proper protective measures to combat this pandemic.</p>
-        <p>Karuna Welfare Society did not ignore the problem but rallied to be part of the solution. Since April 2020, we have been able to provide food supplies, masks, sanitizers for those who live under the poverty line and refreshments and food packets to those who were returning by foot to their native villages.</p>
-        <p>We were also able to raise awareness and get people to donate blankets and other beddings for those living on the streets due to financial challenges.</p>
-        <p>As of December 2020, we have helped over 5,000 families and we are looking to help more if the situation worsens. If you want to partner with us and help us help others, please feel free to contact us.</p>
+        <p>At the start of this year with the Covid-19 pandemic hitting the entire world, those living under the poverty
+          line were hit even harder. Loss of jobs led to lack of food, and they were unable to have proper protective
+          measures to combat this pandemic.</p>
+        <p>Karuna Welfare Society did not ignore the problem but rallied to be part of the solution. Since April 2020, we
+          have been able to provide food supplies, masks, sanitizers for those who live under the poverty line and
+          refreshments and food packets to those who were returning by foot to their native villages.</p>
+        <p>We were also able to raise awareness and get people to donate blankets and other beddings for those living on the
+          streets due to financial challenges.</p>
+        <p>As of December 2020, we have helped over 5,000 families and we are looking to help more if the situation worsens.
+          If you want to partner with us and help us help others, please feel free to contact us.</p>
+      </div>
+    </div>
+    <div id="karuna-aid" class="tabcontent">
+      <h4>Karuna Aid:</h4>
+      <div class="multicolumn">
+        <p>Numerous studies show that illiterate women have high levels of fertility and mortality, poor nutritional status, low
+        earning potential, and little autonomy within the household. A woman’s lack of education also has a negative impact on
+        the health and wellbeing of her children.</p>
+        <p>Karuna Aid aims to help the girls in India with their education, food, housing, and clothing. We believe that children,
+        no matter their gender, are destined to do great things if given the right opportunities. Karuna Aid aspires to be the
+        opportunity for girls who would otherwise would not have the chance for formal education, or basic amenities.</p>
+
       </div>
     </div>
    
